--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-<p>testy test!!!! I'm so quirky yeahhh</p>
+<html><head>
+<title>OTFT: The Videogame</title>
+<!--link rel="stylesheet" type="text/css" href="style/another danger.css"-->
+<!--link rel="icon" href="OTFTPfp.jpg"-->
+<style>
+h1 {
+letter-spacing: 5px;
+font-size: 50px;
+}
+body {
+ padding:0;
+  margin:0;
+  width:100%;
+  height:100%;
+  background-size:cover;
+  background-repeat:no-repeat;
+  background-position:center;
+  background-color: rgba(255,000,000,0.7);
+}
+</style>
+<!--background-image: url("otft.png");-->
+<center><h1>OTFTs Website</h1>
+<!--div><a href="TeamOTFT">Team OTFT</a> <a href="Products">Products</a> <a href="FAQ">FAQ</a> <a href="Contact">Contact Me!</a></div-->
+<h1>About</h1>
+<p>OTFT Studios is a company by OTFTYT Created in 2018 with the first game in development being Team OTFT. For more information
+about the game, visit the game's page.</p>
+<h1>Other Major Projects</h1>
+<p>OTFT has been working on other projects as well, like OGDPS and Rolling Sky World. OGDPS is a remake of GD to be connected to a different server,
+add 2 levels, and look appealing. It has a ton of uploaded levels that are fun and worth checking out. Rolling Sky World is a fangame
+of Rolling Sky that puts Skyball in an open-world area. It has been since cancelled temporarly and is not being worked on for the
+forseeable future.</p>
+</center>
+</body>
+</html>
