--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html><head>
 <title>OTFT: The Videogame</title>
-<!--link rel="stylesheet" type="text/css" href="style/another danger.css"-->
-<!--link rel="icon" href="OTFTPfp.jpg"-->
+<link rel="stylesheet" type="text/css" href="another danger.otf">
+<link rel="icon" href="images/iconv1.png">
 <style>
 h1 {
 letter-spacing: 5px;
@@ -12,13 +12,13 @@ body {
   margin:0;
   width:100%;
   height:100%;
+  background-image: url("images/WebsiteBackground01.png");
   background-size:cover;
   background-repeat:no-repeat;
   background-position:center;
   background-color: rgba(255,000,000,0.7);
 }
 </style>
-<!--background-image: url("otft.png");-->
 <center><h1>OTFTs Website</h1>
 <!--div><a href="TeamOTFT">Team OTFT</a> <a href="Products">Products</a> <a href="FAQ">FAQ</a> <a href="Contact">Contact Me!</a></div-->
 <h1>About</h1>
