--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html><head>
 <title>OTFT: The Videogame</title>
-<link rel="stylesheet" type="text/css" href="another danger.otf">
 <link rel="icon" href="images/iconv1.png">
 <style>
 h1 {
 letter-spacing: 5px;
 font-size: 50px;
+font-family: AnotherDanger;
 }
 body {
  padding:0;
@@ -13,13 +13,34 @@ body {
   width:100%;
   height:100%;
   background-image: url("images/WebsiteBackground01.png");
-  background-size:cover;
-  background-repeat:no-repeat;
-  background-position:center;
-  background-color: rgba(255,000,000,0.7);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: rgba(255,000,000,0.5);
+}
+p {
+  font-family: Blackentia;
+}
+@font-face {
+    font-family: AnotherDanger;
+    src: url("another danger.otf") format("opentype");
+}
+@font-face {
+    font-family: AnotherDanger;
+    font-weight: italics
+    src: url("another danger italics.otf") format("opentype");
+}
+@font-face {
+    font-family: Blackentia;
+    src: url("Blackentia 4F.ttf") format("opentype");
+}
+@font-face {
+    font-family: Blackentia;
+    font-weight: italics
+    src: url("Blackentia 4F-Italic.ttf") format("opentype");
 }
 </style>
-<center><h1>OTFTs Website</h1>
+</head><body><center><h1>OTFTs Website</h1>
 <!--div><a href="TeamOTFT">Team OTFT</a> <a href="Products">Products</a> <a href="FAQ">FAQ</a> <a href="Contact">Contact Me!</a></div-->
 <h1>About</h1>
 <p>OTFT Studios is a company by OTFTYT Created in 2018 with the first game in development being Team OTFT. For more information
@@ -30,5 +51,4 @@ add 2 levels, and look appealing. It has a ton of uploaded levels that are fun a
 of Rolling Sky that puts Skyball in an open-world area. It has been since cancelled temporarly and is not being worked on for the
 forseeable future.</p>
 </center>
-</body>
-</html>
+</body></html>
