--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body {
   background-color: rgba(255,000,000,0.5);
 }
 p {
-  font-family: Blackentia;
+  font-family: Blackentina;
 }
 @font-face {
     font-family: AnotherDanger;
@@ -31,13 +31,13 @@ p {
     src: url("another danger italics.otf") format("opentype");
 }
 @font-face {
-    font-family: Blackentia;
-    src: url("Blackentia 4F.ttf") format("opentype");
+    font-family: Blackentina;
+    src: url("Blackentina 4F.ttf") format("opentype");
 }
 @font-face {
-    font-family: Blackentia;
+    font-family: Blackentina;
     font-weight: italics
-    src: url("Blackentia 4F-Italic.ttf") format("opentype");
+    src: url("Blackentina 4F-Italic.ttf") format("opentype");
 }
 </style>
 </head><body><center><h1>OTFTs Website</h1>
