--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@ body {
   margin:0;
   width:100%;
   height:100%;
-  background-image: url("images/WebsiteBackground01.png");
+  background-image: url("images/WebsiteBackground02.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  background-color: rgba(255,000,000,0.5);
+  background-color: rgba(0,0,0,0.6);
 }
 p {
   font-family: Blackentina;
@@ -40,7 +40,7 @@ p {
     src: url("Blackentina 4F-Italic.ttf") format("opentype");
 }
 </style>
-</head><body><center><h1>OTFTs Website</h1>
+</head><body><center><div style="width:700px"><h1>OTFTs Website</h1>
 <!--div><a href="TeamOTFT">Team OTFT</a> <a href="Products">Products</a> <a href="FAQ">FAQ</a> <a href="Contact">Contact Me!</a></div-->
 <h1>About</h1>
 <p>OTFT Studios is a company by OTFTYT Created in 2018 with the first game in development being Team OTFT. For more information
@@ -50,5 +50,6 @@ about the game, visit the game's page.</p>
 add 2 levels, and look appealing. It has a ton of uploaded levels that are fun and worth checking out. Rolling Sky World is a fangame
 of Rolling Sky that puts Skyball in an open-world area. It has been since cancelled temporarly and is not being worked on for the
 forseeable future.</p>
-</center>
-</body></html>
+</div></center>
+</body>
+</html>
