Massive Website Changes

--- a/index.html
+++ b/index.html
@@ -1,55 +1,73 @@
 <html><head>
-<title>OTFT: The Videogame</title>
-<link rel="icon" href="images/iconv1.png">
-<style>
-h1 {
-letter-spacing: 5px;
-font-size: 50px;
-font-family: AnotherDanger;
-}
-body {
- padding:0;
-  margin:0;
-  width:100%;
-  height:100%;
-  background-image: url("images/WebsiteBackground02.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-color: rgba(0,0,0,0.6);
-}
-p {
-  font-family: Blackentina;
-}
-@font-face {
+    <title>OTFT: The Videogame</title>
+    <link rel="icon" href="images/iconv1.png">
+    <style>
+    h1 {
+    letter-spacing: 5px;
+    font-size: 50px;
     font-family: AnotherDanger;
-    src: url("another danger.otf") format("opentype");
-}
-@font-face {
+    }
+    h2 {
+    letter-spacing: 5px;
+    font-size: 40px;
     font-family: AnotherDanger;
-    font-weight: italics
-    src: url("another danger italics.otf") format("opentype");
-}
-@font-face {
-    font-family: Blackentina;
-    src: url("Blackentina 4F.ttf") format("opentype");
-}
-@font-face {
-    font-family: Blackentina;
-    font-weight: italics
-    src: url("Blackentina 4F-Italic.ttf") format("opentype");
-}
-</style>
-</head><body><center><div style="width:700px"><h1>OTFTs Website</h1>
-<!--div><a href="TeamOTFT">Team OTFT</a> <a href="Products">Products</a> <a href="FAQ">FAQ</a> <a href="Contact">Contact Me!</a></div-->
-<h1>About</h1>
-<p>OTFT Studios is a company by OTFTYT Created in 2018 with the first game in development being Team OTFT. For more information
-about the game, visit the game's page.</p>
-<h1>Other Major Projects</h1>
-<p>OTFT has been working on other projects as well, like OGDPS and Rolling Sky World. OGDPS is a remake of GD to be connected to a different server,
-add 2 levels, and look appealing. It has a ton of uploaded levels that are fun and worth checking out. Rolling Sky World is a fangame
-of Rolling Sky that puts Skyball in an open-world area. It has been since cancelled temporarly and is not being worked on for the
-forseeable future.</p>
-</div></center>
-</body>
-</html>
+    }
+    body {
+     padding:0;
+      margin:0;
+      width:100%;
+      height:100%;
+      background-image: url("images/WebsiteBackground02.png");
+      background-size: cover;
+      background-repeat: repeat-y;
+      background-position: center;
+      background-color: rgba(0,0,0,0.6);
+    }
+    p {
+      font-family: Blackentina;
+      font-size:25px;
+    }
+    text {
+      font-family: Blackentina;
+      font-size:70px;
+      color:red;
+      offset-position:50px;
+    }
+    a {
+      font-family: Blackentina;
+      font-size: 30px;
+      color:red;
+    }
+    div {
+        display: block;
+        unicode-bidi: isolate;
+    }
+    @font-face {
+        font-family: AnotherDanger;
+        src: url("another danger.otf") format("opentype");
+    }
+    @font-face {
+        font-family: AnotherDanger;
+        font-weight: italics
+        src: url("another danger italics.otf") format("opentype");
+    }
+    @font-face {
+        font-family: Blackentina;
+        src: url("Blackentina 4F.ttf") format("opentype");
+    }
+    @font-face {
+        font-family: Blackentina;
+        font-weight: italics
+        src url("Blackentina 4F-Italic.ttf") format("opentype");
+    }
+    </style>
+    </head><body><center><div style="background-color: black;color: white;display: flex;justify-content: center;align-items: center;flex-direction: column;"><h1 style="font-size:40px;">OTFT: The Videogame</h1><div style="text-size-adjust: revert;display: flex;justify-content: center;align-items: center;"><a href="index.html">Homepage</a><text> · </text><a href="Products">Products</a><text> · </text><a href="FAQ">FAQ</a><text> · </text><a href="Contact">Contact Me!</a></div></div>
+        <div style="width:700px;display: block;"><h1>About OTFT: The Videogame</h1>
+    <p>This videogame is currently in development by OTFT using Unity 2022. It is a 3D/2D platformer game with major focus on its storyline.</p>
+    <h1>Meet the Characters</h1>
+    <div><h2>OTFT</h2><p>OTFT, the arrogant and overconfident, yet loyal and caring humanoid. He enjoys adventure and never flinches in the face of danger (or so he thinks). Loves to have a good fight with anyone. Hes very agile, quick, and he has fire powers (if that wasnt already obvious). OTFT lacks in using his head and sometimes doesn't play very smart in dire situations. Nevertheless, hes always willing to lend a helping hand to everyone (even if hes not very helpful) and will always enjoy a good fight.</p><p>Even though hes just a puny human, OTFT thinks very highly of himself and can tend to sometimes think hes better than everyone. But this doesnt get in the way of his devoted nature to his friends or family. He treats them with respect and loyalty, even if he thinks hes better. He's so devoted and loyal to them in fact, that he would be willing to sacrifice himself for them.</p>
+        <h2>Warper</h2><p>Warper, or JJ, is the silly little red ball friend, the one who lifts the spirits of the trio. Warper comes from a completely different universe, one where his kind, the shape animals, used to thrive. But when their universe was destroyed, because they killed the wife of a very important galactic ruler, many of them were lost in time forever. Not Warper though, Warper was able to track down this mystery ruler to this universe and is actively searching for him. Catching up with OTFT and his brother, they team up briefly to track down who they think is this ruler, only to find out it was merely a decoy.</p><p>Warper used to rule over the shape animal kingdom in the previous universe for eons, protecting them from danger and generally being a leader. One of his more notable feats was defending the kingdom from a vicious shape named Phoenix. He was appointed into power by Warper, but this was quickly revoked when Phoenix created Roadkill and tried to cause mass genocide. Warper sealed away Phoenix for good.</p>
+        <h2>BlooDerg</h2><p>Bloo is a very shy and quiet dragon. Spending most of his life alone, hes very anti-social and he only openly communicates with OTFT, his brother. He's only related to OTFT, a humanoid, because they share the DNA of the same father. Since Bloo was adopted as a pet into the same family as OTFT was adopted into, they grew up together and have been very close ever since. Since OTFT doesnt think, Bloo's the thinker for him. He's very smart, being over 1500 years old, and despite how nervous and sometimes overthinking he may be, he'll always find away.</p><p>Bloo is very sensitive and can get his feelings hurt relatively easy. He is also afraid of anything monsterous, despite the fact that he is a 7 foot tall dragon. Even so, and even though his skin is too strong to be stung, he has melissophobia, the fear of bees/wasps/hornets.</p></div>
+    </div></center>
+    </body>
+    </html>
