--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html><head>
+    <meta property="og:title" content="OTFT: The Videogame Official Website">
+    <meta property="og:description" content="The Official Website for OTFT!">
+    <meta property="og:image" content="https://github.com/OTFT/otft_tvg/images/OTFTSquare.png">
     <title>OTFT: The Videogame</title>
     <link rel="icon" href="images/iconv1.png">
     <style>
