--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         src: url("Tomorrow-Bold.ttf") format("opentype");
     }
     </style>
-    </head><body><center><div id="headerthingie" style="background-color: black;color: white;display: flex;justify-content: center;align-items: center;flex-direction: column;"><h1 style="font-size:40px;">OTFT: The Videogame</h1><template id="weblinksDiv"></template><script type="text/javascript" src="reusediv.js"></script></div>
+    </head><body><center><div id="headerthingie" style="background-color: black;color: white;display: flex;justify-content: center;align-items: center;flex-direction: column;"><h1 style="font-size:40px;">OTFT: The Videogame</h1><template id="weblinksDiv"></template><script type="text/javascript" src="reusedivfix.js"></script></div>
         <div style="width:700px;display: block;"><h1>About OTFT: The Videogame</h1>
     <p>OTFT is a videogame about a humanoid nammed OTFT who grows up in a ruined future of the Earth, where there are little to no humans left. In the storyline, OTFT and his brother, BlooDerg, make desprate efforts to defend their village from inpending danger and OTFT slowly discovers himself and the full complete truth about his conception.</p>
     <p>This game is mainly a 2.5D platformer (2D playstyle, 3D visuals, and some 2D visuals), with a brouder focus on its story. This game includes 9 different areas, and 5 will be included in the upcoming demo for OTFT.</p>
