--- a/meetchars/index.html
+++ b/meetchars/index.html
@@ -80,7 +80,7 @@
         src: url("../Tomorrow-Bold.ttf") format("opentype");
     }
     </style>
-    </head><body><center><div id="headerthingie" style="background-color: black;color: white;display: flex;justify-content: center;align-items: center;flex-direction: column;"><h1 style="font-size:40px;">OTFT: The Videogame</h1><template id="weblinksDiv"></template><script type="text/javascript" src="../reusediv.js"></script></div>
+    </head><body><center><div id="headerthingie" style="background-color: black;color: white;display: flex;justify-content: center;align-items: center;flex-direction: column;"><h1 style="font-size:40px;">OTFT: The Videogame</h1><template id="weblinksDiv"></template><script type="text/javascript" src="../reusedivfix.js"></script></div>
         <div style="width:700px;display: block;"><h1>Meet the Characters</h1>
     <div>
         <div style="background-color: rgba(255, 0, 0, 0.5);display: flex;flex-direction: row;flex-wrap: wrap;align-content: center;justify-content: space-around;align-items: center;border: rgba(255, 0, 0, 0.5);border-width: 5px;border-style: solid;">
