Added About Page

--- a/meetchars/index.html
+++ b/meetchars/index.html
@@ -1,6 +1,6 @@
 <html><head>
-    <meta property="og:title" content="OTFT: The Videogame Official Website">
-    <meta property="og:description" content="The Official Website for OTFT!">
+    <meta property="og:title" content="OTFT: Meet the Characters!">
+    <meta property="og:description" content="Meet the Characters Who Will Debut in OTFT!">
     <meta property="og:image:secure_url" content="https://otft.github.io/otft_tvg/images/OTFTSquare.png">
     <title>OTFT: The Videogame</title>
     <link rel="icon" href="../images/iconv1.png">
@@ -11,7 +11,7 @@
     }
     h2 {
     font-size: 40px;
-    font-family: FlamingHope;
+    font-family: Blackentina;
     }
     body {
      padding:0;
