--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta property="og:image:secure_url" content="https://otft.github.io/otft_tvg/images/OTFTSquare.png">
     <title>OTFT: The Videogame</title>
     <link rel="icon" href="images/iconv1.png">
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
     <style>
     h1 {
     font-size: 50px;
@@ -12,7 +11,7 @@
     }
     h2 {
     font-size: 40px;
-    font-family: FlamingHope;
+    font-family: Blackentina;
     }
     body {
      padding:0;
@@ -83,7 +82,7 @@
     </style>
     </head><body><center><div id="headerthingie" style="background-color: black;color: white;display: flex;justify-content: center;align-items: center;flex-direction: column;"><h1 style="font-size:40px;">OTFT: The Videogame</h1><template id="weblinksDiv"></template><script type="text/javascript" src="reusedivfix.js"></script></div>
         <div style="width:700px;display: block;"><h1>About OTFT: The Videogame</h1>
-    <p>OTFT is a videogame about a humanoid nammed OTFT who grows up in a ruined future of the Earth, where there are little to no humans left. In the storyline, OTFT and his brother, BlooDerg, make desprate efforts to defend their village from inpending danger and OTFT slowly discovers himself and the full complete truth about his conception.</p>
+    <p>OTFT is a videogame about a humanoid nammed OTFT who grows up in a ruined future of the Earth, where there are little to no humans left. In the storyline, OTFT and his brother, BlooDerg, make desprate efforts to defend their village from impending danger and OTFT slowly discovers himself and the full complete truth about his conception.</p>
     <p>This game is mainly a 2.5D platformer (2D playstyle, 3D visuals, and some 2D visuals), with a brouder focus on its story. This game includes 9 different areas, and 5 will be included in the upcoming demo for OTFT.</p>
     </center>
     <div id="footerthingie" style="background-color: black;color: white;display: flex;justify-content: center;align-items: center;flex-direction: column;position: relative;bottom: 0px;width: 100%;"><template id="weblinksDiv01"></template><script type="text/javascript" src="reusablesubdiv.js"></script><p style="height:20px;font-size:20px;">ⓒ OTFT Studios 2024</p></div>
