--- a/faqdemo/index.html
+++ b/faqdemo/index.html
@@ -86,13 +86,26 @@
 
     <textarea id="inputQuestion" rows="4" cols="50" placeholder="Question goes here..."></textarea>
     <br>
-    <input type="submit" value="Submit" onclick="submitData()"><script type="module" src="storethedata.js"></script>
+    <input type="submit" value="Submit" onclick="submitData()">
     </center>
     <br>
     <div id="footerthingie" style="background-color: black;color: white;display: flex;justify-content: center;align-items: center;flex-direction: column;position: relative;bottom: 0px;width: 100%;"><template id="weblinksDiv01"></template><script type="text/javascript" src="../reusablesubdiv.js"></script><p style="height:20px;font-size:20px;">ⓒ OTFT Studios 2024</p></div>
     </body>
-    <script type="module">
-        import { fs } from './fs'
+    <script type="text/javascript">
+        function submitData() {
+
+        var fs = require('fs')
+
+        // Data which will be appended to the file.
+        let newData = "\n" + document.getElementById("inputQuestion").value;
+
+        // Append data to 'Hello.txt' .
+        fs.appendFile('storeduserdata.txt', newData, (err) => {
+
+        // In case of a error throw err.
+        if (err) throw err;
+        })
+    }
     </script>
     </html>
 
