--- a/faqdemo/index.html
+++ b/faqdemo/index.html
@@ -94,7 +94,7 @@
     <script type="text/javascript">
         function submitData() {
 
-        var fs = require('fs')
+        var fs = require('node:fs')
 
         // Data which will be appended to the file.
         let newData = "\n" + document.getElementById("inputQuestion").value;
