--- a/faqdemo/index.html
+++ b/faqdemo/index.html
@@ -91,6 +91,9 @@
     <br>
     <div id="footerthingie" style="background-color: black;color: white;display: flex;justify-content: center;align-items: center;flex-direction: column;position: relative;bottom: 0px;width: 100%;"><template id="weblinksDiv01"></template><script type="text/javascript" src="../reusablesubdiv.js"></script><p style="height:20px;font-size:20px;">ⓒ OTFT Studios 2024</p></div>
     </body>
+    <script type="module">
+        import { require } from 'https://requirejs.org/docs/release/2.3.5/minified/require.js'
+    </script>
     <script type="text/javascript">
         function submitData() {
 
