--- a/faqdemo/index.html
+++ b/faqdemo/index.html
@@ -92,7 +92,7 @@
     <div id="footerthingie" style="background-color: black;color: white;display: flex;justify-content: center;align-items: center;flex-direction: column;position: relative;bottom: 0px;width: 100%;"><template id="weblinksDiv01"></template><script type="text/javascript" src="../reusablesubdiv.js"></script><p style="height:20px;font-size:20px;">ⓒ OTFT Studios 2024</p></div>
     </body>
     <script type="module">
-        import { require } from 'node:require'
+        import { require } from './require.mjs'
     </script>
     <script type="text/javascript">
         function submitData() {
