--- a/faqdemo/index.html
+++ b/faqdemo/index.html
@@ -93,6 +93,8 @@
     </body>
     <script type="module">
         import * as require from 'https://requirejs.org/docs/release/2.3.5/minified/require.js'
+
+        window.submitData = submitData();
         
         function submitData() {
 
