--- a/faqdemo/index.html
+++ b/faqdemo/index.html
@@ -98,7 +98,7 @@
         
         function submitData() {
 
-        var fs = require('node:fs')
+        var fs = require('node:fs');
 
         // Data which will be appended to the file.
         let newData = "\n" + document.getElementById("inputQuestion").value;
