--- a/faqdemo/index.html
+++ b/faqdemo/index.html
@@ -91,7 +91,7 @@
     <br>
     <div id="footerthingie" style="background-color: black;color: white;display: flex;justify-content: center;align-items: center;flex-direction: column;position: relative;bottom: 0px;width: 100%;"><template id="weblinksDiv01"></template><script type="text/javascript" src="../reusablesubdiv.js"></script><p style="height:20px;font-size:20px;">ⓒ OTFT Studios 2024</p></div>
     </body>
-    <script type="module">
+    <script type="text/javascript">
         window.submitData = submitData();
         
         import * as require from 'https://requirejs.org/docs/release/2.3.5/minified/require.js';
