--- a/faqdemo/index.html
+++ b/faqdemo/index.html
@@ -92,9 +92,7 @@
     <div id="footerthingie" style="background-color: black;color: white;display: flex;justify-content: center;align-items: center;flex-direction: column;position: relative;bottom: 0px;width: 100%;"><template id="weblinksDiv01"></template><script type="text/javascript" src="../reusablesubdiv.js"></script><p style="height:20px;font-size:20px;">ⓒ OTFT Studios 2024</p></div>
     </body>
     <script type="module">
-        import * as require from 'https://requirejs.org/docs/release/2.3.5/minified/require.js';
-
-        var fs = require('node:fs');
+        import * as fs from 'node:fs';
         
         function submitData() {
         // Data which will be appended to the file.
