--- a/faqdemo/index.html
+++ b/faqdemo/index.html
@@ -91,9 +91,7 @@
     <br>
     <div id="footerthingie" style="background-color: black;color: white;display: flex;justify-content: center;align-items: center;flex-direction: column;position: relative;bottom: 0px;width: 100%;"><template id="weblinksDiv01"></template><script type="text/javascript" src="../reusablesubdiv.js"></script><p style="height:20px;font-size:20px;">ⓒ OTFT Studios 2024</p></div>
     </body>
-    <script type="module">
-        import * as fs from 'https://esm.sh/v135/node_fs.js';
-        
+    <script type="text/javascript">        
         function submitData() {
         // Data which will be appended to the file.
         let newData = "\n" + document.getElementById("inputQuestion").value;
