--- a/faqdemo/index.html
+++ b/faqdemo/index.html
@@ -4,6 +4,7 @@
     <meta property="og:image:secure_url" content="https://otft.github.io/otft_tvg/images/OTFTSquare.png">
     <title>OTFT: The Videogame</title>
     <link rel="icon" href="../images/iconv1.png">
+    <script src="index.js"></script>
     <style>
     h1 {
     font-size: 50px;
