--- a/faqdemo/index.html
+++ b/faqdemo/index.html
@@ -5,6 +5,9 @@
     <title>OTFT: The Videogame</title>
     <link rel="icon" href="../images/iconv1.png">
     <script type="module" src="index.js"></script>
+    <script type="module">
+          import fsExtra from 'https://cdn.jsdelivr.net/npm/fs-extra@11.2.0/+esm
+    </script>
     <style>
     h1 {
     font-size: 50px;
