--- a/faqdemo/index.html
+++ b/faqdemo/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="../images/iconv1.png">
     <script type="module" src="index.js"></script>
     <script type="module">
-          import fsExtra from 'https://cdn.jsdelivr.net/npm/fs-extra@11.2.0/+esm
+          import fsExtra from 'https://cdn.jsdelivr.net/npm/fs-extra@11.2.0/+esm'
     </script>
     <style>
     h1 {
